Fix NN bugs, add batch size support

--- a/notebook/keras-experiment.ipynb
+++ b/notebook/keras-experiment.ipynb
@@ -702,13 +702,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.6411 - acc: 0.6667\n",
       "Epoch 72/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.6370 - acc: 0.6667\n",
-      "Epoch 73/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 73/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.6400 - acc: 0.6667\n",
       "Epoch 74/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.6382 - acc: 0.6667\n",
@@ -876,13 +870,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.6065 - acc: 0.6667\n",
       "Epoch 156/2000\n",
       "12/12 [==============================] - 0s 2ms/step - loss: 0.6053 - acc: 0.6667\n",
-      "Epoch 157/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 157/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.5983 - acc: 0.6667\n",
       "Epoch 158/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.5999 - acc: 0.6667\n",
@@ -1050,13 +1038,7 @@
       "12/12 [==============================] - 0s 2ms/step - loss: 0.3318 - acc: 0.9167\n",
       "Epoch 240/2000\n",
       "12/12 [==============================] - 0s 2ms/step - loss: 0.3248 - acc: 0.9167\n",
-      "Epoch 241/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 241/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.3240 - acc: 0.9167\n",
       "Epoch 242/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.3267 - acc: 0.9167\n",
@@ -1224,13 +1206,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2601 - acc: 0.9167\n",
       "Epoch 324/2000\n",
       "12/12 [==============================] - 0s 893us/step - loss: 0.2478 - acc: 0.9167\n",
-      "Epoch 325/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 325/2000\n",
       "12/12 [==============================] - 0s 929us/step - loss: 0.2245 - acc: 0.9167\n",
       "Epoch 326/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2364 - acc: 0.9167\n",
@@ -1398,13 +1374,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1994 - acc: 0.9167\n",
       "Epoch 408/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2189 - acc: 0.9167\n",
-      "Epoch 409/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 409/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2489 - acc: 0.9167\n",
       "Epoch 410/2000\n",
       "12/12 [==============================] - 0s 763us/step - loss: 0.2242 - acc: 0.9167\n",
@@ -1572,13 +1542,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1993 - acc: 0.9167\n",
       "Epoch 492/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1780 - acc: 0.9167\n",
-      "Epoch 493/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 493/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2015 - acc: 0.9167\n",
       "Epoch 494/2000\n",
       "12/12 [==============================] - 0s 2ms/step - loss: 0.2086 - acc: 0.8333\n",
@@ -1746,13 +1710,7 @@
       "12/12 [==============================] - 0s 938us/step - loss: 0.2158 - acc: 0.9167\n",
       "Epoch 576/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1985 - acc: 0.9167\n",
-      "Epoch 577/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 577/2000\n",
       "12/12 [==============================] - 0s 2ms/step - loss: 0.1703 - acc: 0.9167\n",
       "Epoch 578/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1946 - acc: 0.8333\n",
@@ -1920,13 +1878,7 @@
       "12/12 [==============================] - 0s 834us/step - loss: 0.1881 - acc: 0.9167\n",
       "Epoch 660/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1861 - acc: 0.9167\n",
-      "Epoch 661/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 661/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1782 - acc: 0.9167\n",
       "Epoch 662/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2069 - acc: 0.9167\n",
@@ -2094,13 +2046,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1641 - acc: 0.9167\n",
       "Epoch 744/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2051 - acc: 0.8333\n",
-      "Epoch 745/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 745/2000\n",
       "12/12 [==============================] - 0s 852us/step - loss: 0.1733 - acc: 0.9167\n",
       "Epoch 746/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1890 - acc: 0.9167\n",
@@ -2268,13 +2214,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1550 - acc: 0.9167\n",
       "Epoch 828/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1750 - acc: 0.9167\n",
-      "Epoch 829/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 829/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1741 - acc: 0.9167\n",
       "Epoch 830/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1516 - acc: 1.0000\n",
@@ -2442,13 +2382,7 @@
       "12/12 [==============================] - 0s 2ms/step - loss: 0.1540 - acc: 0.9167\n",
       "Epoch 912/2000\n",
       "12/12 [==============================] - 0s 972us/step - loss: 0.1272 - acc: 1.0000\n",
-      "Epoch 913/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 913/2000\n",
       "12/12 [==============================] - 0s 2ms/step - loss: 0.1357 - acc: 0.9167\n",
       "Epoch 914/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1390 - acc: 0.9167\n",
@@ -2616,13 +2550,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1285 - acc: 0.9167\n",
       "Epoch 996/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1534 - acc: 0.9167\n",
-      "Epoch 997/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 997/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1274 - acc: 0.9167\n",
       "Epoch 998/2000\n",
       "12/12 [==============================] - 0s 923us/step - loss: 0.1475 - acc: 0.9167\n",
@@ -2788,13 +2716,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1455 - acc: 0.9167\n",
       "Epoch 1079/2000\n",
       "12/12 [==============================] - 0s 954us/step - loss: 0.1095 - acc: 1.0000\n",
-      "Epoch 1080/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1080/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1182 - acc: 1.0000\n",
       "Epoch 1081/2000\n",
       "12/12 [==============================] - 0s 904us/step - loss: 0.1223 - acc: 0.9167\n",
@@ -2960,13 +2882,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1027 - acc: 1.0000\n",
       "Epoch 1162/2000\n",
       "12/12 [==============================] - 0s 2ms/step - loss: 0.1355 - acc: 0.8333\n",
-      "Epoch 1163/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1163/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1131 - acc: 0.9167\n",
       "Epoch 1164/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1116 - acc: 1.0000\n",
@@ -3132,13 +3048,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2329 - acc: 0.9167\n",
       "Epoch 1245/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1784 - acc: 0.9167\n",
-      "Epoch 1246/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1246/2000\n",
       "12/12 [==============================] - 0s 715us/step - loss: 0.0956 - acc: 1.0000\n",
       "Epoch 1247/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1732 - acc: 0.9167\n",
@@ -3304,13 +3214,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1130 - acc: 0.9167\n",
       "Epoch 1328/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1299 - acc: 0.9167\n",
-      "Epoch 1329/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1329/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1141 - acc: 0.9167\n",
       "Epoch 1330/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1219 - acc: 0.9167\n",
@@ -3476,13 +3380,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0830 - acc: 1.0000\n",
       "Epoch 1411/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0806 - acc: 1.0000\n",
-      "Epoch 1412/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1412/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0803 - acc: 1.0000\n",
       "Epoch 1413/2000\n",
       "12/12 [==============================] - 0s 2ms/step - loss: 0.0797 - acc: 1.0000\n",
@@ -3648,13 +3546,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0872 - acc: 0.9167\n",
       "Epoch 1494/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0793 - acc: 1.0000\n",
-      "Epoch 1495/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1495/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0919 - acc: 0.9167\n",
       "Epoch 1496/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0907 - acc: 0.9167\n",
@@ -3820,13 +3712,7 @@
       "12/12 [==============================] - 0s 862us/step - loss: 0.2313 - acc: 0.9167\n",
       "Epoch 1577/2000\n",
       "12/12 [==============================] - 0s 868us/step - loss: 0.2250 - acc: 0.9167\n",
-      "Epoch 1578/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1578/2000\n",
       "12/12 [==============================] - 0s 934us/step - loss: 0.1152 - acc: 0.9167\n",
       "Epoch 1579/2000\n",
       "12/12 [==============================] - 0s 994us/step - loss: 0.0849 - acc: 0.9167\n",
@@ -3992,13 +3878,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0693 - acc: 1.0000\n",
       "Epoch 1660/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0787 - acc: 1.0000\n",
-      "Epoch 1661/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1661/2000\n",
       "12/12 [==============================] - 0s 2ms/step - loss: 0.0749 - acc: 1.0000\n",
       "Epoch 1662/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0900 - acc: 0.9167\n",
@@ -4164,13 +4044,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0870 - acc: 1.0000\n",
       "Epoch 1743/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0945 - acc: 0.9167\n",
-      "Epoch 1744/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1744/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1514 - acc: 0.9167\n",
       "Epoch 1745/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1146 - acc: 0.9167\n",
@@ -4336,13 +4210,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0617 - acc: 1.0000\n",
       "Epoch 1826/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0554 - acc: 1.0000\n",
-      "Epoch 1827/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1827/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0935 - acc: 0.9167\n",
       "Epoch 1828/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0545 - acc: 1.0000\n",
@@ -4508,13 +4376,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.4498 - acc: 0.9167\n",
       "Epoch 1909/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.2572 - acc: 0.9167\n",
-      "Epoch 1910/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1910/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1430 - acc: 0.9167\n",
       "Epoch 1911/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1322 - acc: 0.9167\n",
@@ -4680,13 +4542,7 @@
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0449 - acc: 1.0000\n",
       "Epoch 1992/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0827 - acc: 0.9167\n",
-      "Epoch 1993/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1993/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.0750 - acc: 1.0000\n",
       "Epoch 1994/2000\n",
       "12/12 [==============================] - 0s 1ms/step - loss: 0.1134 - acc: 0.9167\n",
@@ -4783,7 +4639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
